--- a/lab 1/udacity/css_problems/1.html
+++ b/lab 1/udacity/css_problems/1.html
@@ -9,7 +9,7 @@
 <body>
 <div id="menu">
     <h1 class="item">Chicken Clay Pot</h1>
-    <img src="img/clay-pot.jpg" alt="clay pot" class="picture">
+    <img src="/lab 1/udacity/css_problems/img/out-cold.png" alt="clay pot" class="picture">
     <p class="description">Crispy rice baked in clay pot topped with chicken and vegetables</p>
 </div>
 </body>
