--- a/lab 2/instagram/inst.html
+++ b/lab 2/instagram/inst.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="phone-mockup">
-            <img src="/lab 2\instagram\photo_5244680678380007587_y.jpg" alt="Instagram Preview">
-        </div>
-        <div>
-            <div class="login-box">
-                <h2>Instagram</h2>
-                <input type="text" placeholder="Телефон, имя пользователя или эл. адрес">
-                <input type="password" placeholder="Пароль">
-                <button>Войти</button>
-                <div class="divider"><span>ИЛИ</span></div>
-                <a href="#" class="fb-login">Войти через Facebook</a>
-                <p><a href="#">Забыли пароль?</a></p>
+    <div class="main_container">
+            <div class="phone-mockup">
+                <img src="/instagram/photo_5244680678380007587_y.jpg" alt="Instagram Preview">
             </div>
-            <div class="register">
-                У вас ещё нет аккаунта? <a href="#">Зарегистрироваться</a>
+            <div>
+                <div class="login-box">
+                    <h2>Instagram</h2>
+                    <input type="text" placeholder="Телефон, имя пользователя или эл. адрес">
+                    <input type="password" placeholder="Пароль">
+                    <button>Войти</button>
+                    <div class="divider"><span>ИЛИ</span></div>
+                    <a href="#" class="fb-login">Войти через Facebook</a>
+                    <p><a href="#">Забыли пароль?</a></p>
+                </div>
+                <div class="register">
+                    У вас ещё нет аккаунта? <a href="#">Зарегистрироваться</a>
+                </div>
+                <div class="app-links">
+                    <p>Установите приложение.</p>
+                    <img src="/instagram/photo_5244680678380007586_m.jpg" alt="Загрузить в App Store">
+                    <img src="/instagram/photo_5244680678380007588_x.jpg" alt="Доступно в Google Play">
+                </div>
             </div>
-            <div class="app-links">
-                <p>Установите приложение.</p>
-                <img src="/lab 2/instagram/photo_5244680678380007586_m.jpg" alt="Загрузить в App Store">
-                <img src="/lab 2/instagram/photo_5244680678380007588_x.jpg" alt="Доступно в Google Play">
-            </div>
-        </div>
     </div>
 </body>
 </html>
